# Hail-Scout

./: .gitignore  AUTH_SETUP.md  COWORK_PM_BRIEF.md  HANDOFF.md  HailIntel_Build_Doc_2.md  README.md  STATUS.md
hailscout-api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SCAFFOLD_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
hailscout-api/.github/workflows/: ci.yml  deploy.yml
hailscout-api/infra/: alb-listener-rules.json  ecs-task-definition.json  route53-records.tf
hailscout-api/migrations/: env.py
hailscout-api/migrations/data/: us_states.json
hailscout-api/migrations/versions/: 001_initial_schema.py  002_add_is_super_admin.py  003_simplify_canvass.py  004_storm_alerts.py  005_saved_reports.py  006_slack_webhook.py  007_audit_events.py  008_marker_assignee.py  009_territories.py  010_marker_notes.py  011_contacts.py  012_hail_swath_uniq.py  013_alert_emails_and_lsr.py  014_storm_quality.py  015_dualpol_persistence.py  016_radar_size_at_lsr.py  017_own_auth.py  018_sms_push_alerts.py  019_user_disabled.py  020_api_tokens.py  021_password_auth.py  021_storms_source_idx.py  022_sms_mfa_session_policy.py  023_user_last_login.py  024_mobile_push_tokens.py  025_alert_zones.py  026_user_names.py
hailscout-api/src/hailscout_api/: __init__.py  config.py  main.py  seed.py
hailscout-api/src/hailscout_api/auth/: __init__.py  api_token.py  clerk.py  hr_provision.py  invite.py  login_guard.py  mfa_challenge.py  mfa_crypto.py  middleware.py  oidc.py  passwords.py  principal.py  session.py  super_admin.py  trusted_device.py
hailscout-api/src/hailscout_api/core/: __init__.py  errors.py  logging.py
hailscout-api/src/hailscout_api/data/: storm_fixtures.py
hailscout-api/src/hailscout_api/db/: __init__.py  base.py  session.py
hailscout-api/src/hailscout_api/db/models/: __init__.py  audit.py  canvass.py  customer.py  mfa.py  ops.py  org.py  parcel.py  password_auth.py  storm.py  territory.py
hailscout-api/src/hailscout_api/routes/: __init__.py  account.py  admin.py  ai.py  alert_zones.py  audit.py  auth.py  contacts.py  contacts_crm.py  hail.py  health.py  integrations.py  markers.py  me.py  mfa.py  monitored.py  parcels.py  provision.py  public.py  reports.py  routing.py  storms.py  team.py  territories.py  tiles.py  tokens.py  webhooks.py
hailscout-api/src/hailscout_api/schemas/: __init__.py  admin.py  ai.py  alert.py  alert_zone.py  contact.py  customer.py  hail.py  marker.py  marker_note.py  me.py  monitored_address.py  report.py  saved_report.py  storm.py  territory.py
hailscout-api/src/hailscout_api/services/: __init__.py  ai_service.py  alert_generator.py  audit.py  calibration.py  email_alerts.py  enrichment.py  expo_push.py  exposure.py  geocoder.py  impact.py  lsr_linker.py  parcels.py  password_reset_email.py  push_alerts.py  raster.py  routing.py  slack.py  sms_alerts.py  sms_sender.py  storm_query.py  storm_screener.py  verification.py
hailscout-api/src/hailscout_api/workers/: __init__.py  alert_worker.py
hailscout-api/tests/: __init__.py  conftest.py  test_admin_reset_mfa.py  test_auth_session.py  test_hail.py  test_health.py  test_me.py  test_oidc_apple.py  test_storms.py
hailscout-data-pipeline/: .env.example  .gitignore  Dockerfile  Dockerfile.nexrad  Makefile  README.md  SCAFFOLD_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  railway.nexrad.json  requirements.txt  ruff.toml  template.yaml
hailscout-data-pipeline/.github/workflows/: ci.yml  deploy.yml
hailscout-data-pipeline/infra/: cloudwatch-alarm.yaml  iam-policy-hailintel-raw.json  iam-policy-mrms-read.json
hailscout-data-pipeline/migrations/: env.py
hailscout-data-pipeline/migrations/versions/: 001_initial_schema.py
hailscout-data-pipeline/src/hailscout_pipeline/: __init__.py  __main__.py  config.py  lambda_handler.py  nexrad_main.py
hailscout-data-pipeline/src/hailscout_pipeline/db/: __init__.py  models.py  session.py  shard_queue.py  upsert.py
hailscout-data-pipeline/src/hailscout_pipeline/extraction/: __init__.py  clustering.py  nexrad_scit.py  polygonize.py  thresholds.py
hailscout-data-pipeline/src/hailscout_pipeline/ingestion/: __init__.py  grib_to_geotiff.py  mping_client.py  mrms_client.py  ncei_nexrad_client.py  nexrad_client.py  spc_lsr_client.py
hailscout-data-pipeline/src/hailscout_pipeline/storage/: __init__.py  s3.py
hailscout-data-pipeline/tests/: __init__.py  test_polygonize.py  test_thresholds.py  test_upsert.py
hailscout-data-pipeline/tests/fixtures/: README.md
hailscout-mobile/: .easignore  .env.example  .gitignore  APP_STORE_LISTING.md  AUTH_SETUP.md  README.md  app.json  babel.config.js  eas.json  index.tsx  package-lock.json  package.json  tsconfig.json
hailscout-mobile/.github/workflows/: ci.yml  eas-build.yml
hailscout-mobile/assets/: README.md
hailscout-mobile/scripts/: README.md
hailscout-tiles/: .env.example  .gitignore  COLOR_LEGEND.md  Dockerfile  INTEGRATION.md  Makefile  README.md  pyproject.toml  ruff.toml
hailscout-tiles/.github/workflows/: ci.yml  deploy.yml
hailscout-tiles/infra/: cloudfront-distribution.tf  ecs-task-definition.json  s3-bucket-policy.json
hailscout-tiles/src/hailscout_tiles/: __init__.py  cli.py  colors.py  config.py
hailscout-tiles/src/hailscout_tiles/jobs/: __init__.py  generate_current.py  generate_historical.py  invalidate_cache.py
hailscout-tiles/src/hailscout_tiles/pipeline/: __init__.py  geojson_export.py  query.py  tile_split.py  tippecanoe.py  upload.py
hailscout-tiles/src/hailscout_tiles/style/: __init__.py  maplibre_style.json
hailscout-tiles/tests/: __init__.py  test_colors.py  test_geojson_export.py  test_tippecanoe.py
hailscout-web/: .env.example  .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
hailscout-web/public/: offline.html  sw.js
hailscout-web/scripts/: gen-alarm-sounds.cjs
hailscout-web/tests/: README.md
outreach/: 01_cole_information.md  02_regrid.md  03_pilot_roofer.md  04_consulting_meteorologist.md
(+240 files in other folders)
