[tool.poetry]
name = "hailscout-data-pipeline"
version = "0.1.0"
description = "Real-time NOAA MRMS MESH hail data ingestion into PostGIS"
authors = ["HailScout Team <kirk@rooftechnologies.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "hailscout_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
cfgrib = "^0.7.4"
xarray = "^2024.3"
rasterio = "^1.3.10"
shapely = "^2.0"
geopandas = "^0.14.0"
geoalchemy2 = "^0.14.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34"
pydantic = "^2.5"
pydantic-settings = "^2.1"
structlog = "^24.1"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
mypy = "^1.8"
ruff = "^0.3"
types-boto3 = "^1.0"
pytest-mock = "^3.14"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C901", # mccabe complexity
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W291",  # trailing whitespace (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hailscout_pipeline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cfgrib.*",
    "xarray.*",
    "rasterio.*",
    "geopandas.*",
    "geoalchemy2.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "aws: marks tests that require AWS credentials",
]

[tool.coverage.run]
source = ["src/hailscout_pipeline"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
