[tool.poetry]
name = "hailscout-tiles"
version = "0.1.0"
description = "Vector tile service for hail-swath polygons"
authors = ["HailScout <dev@hailscout.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "hailscout_tiles", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5"
pydantic-settings = "^2.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
geopandas = "^0.14"
shapely = "^2.0"
fiona = "^1.9"
rasterio = "^1.3"
structlog = "^24.1"
python-dotenv = "^1.0"
click = "^8.1"
boto3 = "^1.28"
botocore = "^1.31"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.7"
ruff = "^0.1"
types-boto3 = "^1.0"
types-requests = "^2.31"

[tool.poetry.scripts]
hailscout-tiles = "hailscout_tiles.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Line too long; we handle with formatter
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/hailscout_tiles --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
